        [metadata]
        name = HDIM
        description = money management thingy
        author = Rafał Kurek

        [options]
        packages =
            hdim
        install_requires =
            requests>=2
        python_requires = >=3.6
        package_dir =
            =src
        zip_safe = no